Closed Bug 1717497 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::dom::SessionStoreDataCollector::CollectSessionStoreData]

Categories

(Firefox :: Session Restore, defect)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Fission Milestone M7a
Tracking Status
firefox-esr78 --- unaffected
firefox89 --- unaffected
firefox90 --- unaffected
firefox91 --- fixed

People

(Reporter: mccr8, Assigned: u608768)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file, 1 obsolete file)

Maybe Fission related. (DOMFissionEnabled=1)

Looks like this showed up in the 20210616214200 build. All of the non-beta crashes have Fission enabled.

Crash report: https://crash-stats.mozilla.org/report/index/008e88c8-f422-4820-a53c-4c6470210620

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(listener->mTimer)

Top 10 frames of crashing thread:

0 libxul.so mozilla::dom::SessionStoreDataCollector::CollectSessionStoreData toolkit/components/sessionstore/SessionStoreDataCollector.cpp:51
1 libxul.so mozilla::dom::SessionStoreChangeListener::HandleEvent toolkit/components/sessionstore/SessionStoreChangeListener.cpp:92
2 libxul.so {virtual override thunk} 
3 libxul.so mozilla::EventListenerManager::HandleEventInternal dom/events/EventListenerManager.cpp:1306
4 libxul.so mozilla::EventTargetChainItem::HandleEventTargetChain dom/events/EventDispatcher.cpp:593
5 libxul.so mozilla::EventTargetChainItem::HandleEventTargetChain dom/events/EventDispatcher.cpp:637
6 libxul.so mozilla::EventDispatcher::Dispatch dom/events/EventDispatcher.cpp:1116
7 libxul.so mozilla::dom::VisualViewport::FireScrollEvent dom/base/VisualViewport.cpp:299
8 libxul.so mozilla::dom::VisualViewport::VisualViewportScrollEvent::Run dom/base/VisualViewport.cpp:280
9 libxul.so nsRefreshDriver::Tick layout/base/nsRefreshDriver.cpp:2274
Severity: -- → S2

This might be bug 1701337, which made it so we no longer create mTimer if browser.sessionstore.debug.no_auto_updates is true... but that's a debug-only pref. Is there any way to find out if it's enabled in these crashes?

Flags: needinfo?(kmadan)

No, prefs are not recorded unless you add a crash annotation for them. There is a ExperimentalFeatures section under ProtectedData that I can see which does contain a bunch of pref, but that pref isn't in there. I don't know what determines if a pref is there or not. Not all of them look like things we have experiments for.

I guess at a glance I did see a few of the prefs in that section in this file, so maybe that's what decides whether they are included or not.

I guess it's a bug regardless since we shouldn't be asserting we have a timer if there's now a path where we don't create one.

Assignee: nobody → kmadan
Status: NEW → ASSIGNED
Regressed by: 1701337
Has Regression Range: --- → yes
Keywords: regression

Depends on D118101

Pushed by kmadan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b3de4da02449 Only assert we have a timer if we expect to have created one, r=farre

Comment on attachment 9228370 [details]
Bug 1717497 - Wait for the _restoreHistory() promise before firing SSTabRestored, r?annyG

Revision D118501 was moved to bug 1696815. Setting attachment 9228370 [details] to obsolete.

Attachment #9228370 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

Retroactively assigning this fixed bug to Fission Milestone M7a.

Fission Milestone: ? → M7a
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: