Bug 1717497 - Only assert we have a timer if we expect to have created one, r=farre

Differential Revision: https://phabricator.services.mozilla.com/D118482